--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.20.1",
 		"sequelize-cli": "^6.4.1"
