--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"homepage": "https://github.com/polekstulod/foodtrip-api#readme",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
