--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.21.2",
-		"sequelize-cli": "^6.4.1"
+		"sequelize-cli": "^6.4.1",
+		"sequelize-datatables": "^3.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.18"
